--- a/contenido-digital-para-inmobiliarias/index.html
+++ b/contenido-digital-para-inmobiliarias/index.html
@@ -448,7 +448,7 @@ img.emoji {
                         <span class="share_link-title">Twitter</span>                    
                     </div>
                 </a>
-                <a class="share_link share_facebook" target="_blank" href="https://www.facebook.com/share.php?u=/contenido-digital-para-inmobiliarias/">
+                <a class="share_link share_facebook" target="_blank" href="https://www.facebook.com/share.php?u=https://www.ecrew.agency/contenido-digital-para-inmobiliarias/">
                     <div class="share_link-block">
                         <span class="fa fa-facebook"></span>
                         <span class="share_link-title">Facebook</span>
