--- a/guerreros-digitales-las-nuevas-herramientas-en-la-epoca-de-la-pandemia/index.html
+++ b/guerreros-digitales-las-nuevas-herramientas-en-la-epoca-de-la-pandemia/index.html
@@ -502,7 +502,7 @@ img.emoji {
                         <span class="share_link-title">Twitter</span>                    
                     </div>
                 </a>
-                <a class="share_link share_facebook" target="_blank" href="https://www.facebook.com/share.php?u=/guerreros-digitales-las-nuevas-herramientas-en-la-epoca-de-la-pandemia/">
+                <a class="share_link share_facebook" target="_blank" href="https://www.facebook.com/share.php?u=https://www.ecrew.agency/guerreros-digitales-las-nuevas-herramientas-en-la-epoca-de-la-pandemia/">
                     <div class="share_link-block">
                         <span class="fa fa-facebook"></span>
                         <span class="share_link-title">Facebook</span>
