--- a/quienes-reemplazaran-a-facebook-analytics/index.html
+++ b/quienes-reemplazaran-a-facebook-analytics/index.html
@@ -356,7 +356,7 @@ img.emoji {
                         <span class="share_link-title">Twitter</span>                    
                     </div>
                 </a>
-                <a class="share_link share_facebook" target="_blank" href="https://www.facebook.com/share.php?u=/quienes-reemplazaran-a-facebook-analytics/">
+                <a class="share_link share_facebook" target="_blank" href="https://www.facebook.com/share.php?u=https://www.ecrew.agency/quienes-reemplazaran-a-facebook-analytics/">
                     <div class="share_link-block">
                         <span class="fa fa-facebook"></span>
                         <span class="share_link-title">Facebook</span>
