--- a/4-must-do-del-marketing-digital-para-inmobiliarias-2021/index.html
+++ b/4-must-do-del-marketing-digital-para-inmobiliarias-2021/index.html
@@ -434,7 +434,7 @@ img.emoji {
                         <span class="share_link-title">Twitter</span>                    
                     </div>
                 </a>
-                <a class="share_link share_facebook" target="_blank" href="https://www.facebook.com/share.php?u=/4-must-do-del-marketing-digital-para-inmobiliarias-2021/">
+                <a class="share_link share_facebook" target="_blank" href="https://www.facebook.com/share.php?u=https://www.ecrew.agency/4-must-do-del-marketing-digital-para-inmobiliarias-2021/">
                     <div class="share_link-block">
                         <span class="fa fa-facebook"></span>
                         <span class="share_link-title">Facebook</span>
