--- a/buyer-journey-en-el-sector-inmobiliario/index.html
+++ b/buyer-journey-en-el-sector-inmobiliario/index.html
@@ -428,7 +428,7 @@ img.emoji {
                         <span class="share_link-title">Twitter</span>                    
                     </div>
                 </a>
-                <a class="share_link share_facebook" target="_blank" href="https://www.facebook.com/share.php?u=/buyer-journey-en-el-sector-inmobiliario/">
+                <a class="share_link share_facebook" target="_blank" href="https://www.facebook.com/share.php?u=https://www.ecrew.agency/buyer-journey-en-el-sector-inmobiliario/">
                     <div class="share_link-block">
                         <span class="fa fa-facebook"></span>
                         <span class="share_link-title">Facebook</span>
