--- a/caso-proyecto-inmobiliario-the-hud/index.html
+++ b/caso-proyecto-inmobiliario-the-hud/index.html
@@ -469,7 +469,7 @@ img.emoji {
                         <span class="share_link-title">Twitter</span>                    
                     </div>
                 </a>
-                <a class="share_link share_facebook" target="_blank" href="https://www.facebook.com/share.php?u=/caso-proyecto-inmobiliario-the-hud/">
+                <a class="share_link share_facebook" target="_blank" href="https://www.facebook.com/share.php?u=https://www.ecrew.agency/caso-proyecto-inmobiliario-the-hud/">
                     <div class="share_link-block">
                         <span class="fa fa-facebook"></span>
                         <span class="share_link-title">Facebook</span>
