--- a/como-mejorar-tus-resultados-con-marketing-digital-para-el-sector-inmobiliario/index.html
+++ b/como-mejorar-tus-resultados-con-marketing-digital-para-el-sector-inmobiliario/index.html
@@ -746,7 +746,7 @@ img.emoji {
                         <span class="share_link-title">Twitter</span>                    
                     </div>
                 </a>
-                <a class="share_link share_facebook" target="_blank" href="https://www.facebook.com/share.php?u=/como-mejorar-tus-resultados-con-marketing-digital-para-el-sector-inmobiliario/">
+                <a class="share_link share_facebook" target="_blank" href="https://www.facebook.com/share.php?u=https://www.ecrew.agency/como-mejorar-tus-resultados-con-marketing-digital-para-el-sector-inmobiliario/">
                     <div class="share_link-block">
                         <span class="fa fa-facebook"></span>
                         <span class="share_link-title">Facebook</span>
