--- a/consejos-para-fomentar-la-creatividad/index.html
+++ b/consejos-para-fomentar-la-creatividad/index.html
@@ -395,7 +395,7 @@ img.emoji {
                         <span class="share_link-title">Twitter</span>                    
                     </div>
                 </a>
-                <a class="share_link share_facebook" target="_blank" href="https://www.facebook.com/share.php?u=/consejos-para-fomentar-la-creatividad/">
+                <a class="share_link share_facebook" target="_blank" href="https://www.facebook.com/share.php?u=https://www.ecrew.agency/consejos-para-fomentar-la-creatividad/">
                     <div class="share_link-block">
                         <span class="fa fa-facebook"></span>
                         <span class="share_link-title">Facebook</span>
