--- a/cpa-y-su-importancia-en-las-estrategias-digitales/index.html
+++ b/cpa-y-su-importancia-en-las-estrategias-digitales/index.html
@@ -470,7 +470,7 @@ img.emoji {
                         <span class="share_link-title">Twitter</span>                    
                     </div>
                 </a>
-                <a class="share_link share_facebook" target="_blank" href="https://www.facebook.com/share.php?u=/cpa-y-su-importancia-en-las-estrategias-digitales/">
+                <a class="share_link share_facebook" target="_blank" href="https://www.facebook.com/share.php?u=https://www.ecrew.agency/cpa-y-su-importancia-en-las-estrategias-digitales/">
                     <div class="share_link-block">
                         <span class="fa fa-facebook"></span>
                         <span class="share_link-title">Facebook</span>
