--- a/diferencias-entre-inbound-marketing-y-outbound-marketing/index.html
+++ b/diferencias-entre-inbound-marketing-y-outbound-marketing/index.html
@@ -418,7 +418,7 @@ img.emoji {
                         <span class="share_link-title">Twitter</span>                    
                     </div>
                 </a>
-                <a class="share_link share_facebook" target="_blank" href="https://www.facebook.com/share.php?u=/diferencias-entre-inbound-marketing-y-outbound-marketing/">
+                <a class="share_link share_facebook" target="_blank" href="https://www.facebook.com/share.php?u=https://www.ecrew.agency/diferencias-entre-inbound-marketing-y-outbound-marketing/">
                     <div class="share_link-block">
                         <span class="fa fa-facebook"></span>
                         <span class="share_link-title">Facebook</span>
