--- a/elementos-claves-para-generar-leads-de-calidad/index.html
+++ b/elementos-claves-para-generar-leads-de-calidad/index.html
@@ -420,7 +420,7 @@ img.emoji {
                         <span class="share_link-title">Twitter</span>                    
                     </div>
                 </a>
-                <a class="share_link share_facebook" target="_blank" href="https://www.facebook.com/share.php?u=/elementos-claves-para-generar-leads-de-calidad/">
+                <a class="share_link share_facebook" target="_blank" href="https://www.facebook.com/share.php?u=https://www.ecrew.agency/elementos-claves-para-generar-leads-de-calidad/">
                     <div class="share_link-block">
                         <span class="fa fa-facebook"></span>
                         <span class="share_link-title">Facebook</span>
