--- a/herramientas-de-gestion-de-proyectos/index.html
+++ b/herramientas-de-gestion-de-proyectos/index.html
@@ -475,7 +475,7 @@ img.emoji {
                         <span class="share_link-title">Twitter</span>                    
                     </div>
                 </a>
-                <a class="share_link share_facebook" target="_blank" href="https://www.facebook.com/share.php?u=/herramientas-de-gestion-de-proyectos/">
+                <a class="share_link share_facebook" target="_blank" href="https://www.facebook.com/share.php?u=https://www.ecrew.agency/herramientas-de-gestion-de-proyectos/">
                     <div class="share_link-block">
                         <span class="fa fa-facebook"></span>
                         <span class="share_link-title">Facebook</span>
