--- a/las-inmobiliarias-en-el-mundo-digital/index.html
+++ b/las-inmobiliarias-en-el-mundo-digital/index.html
@@ -393,7 +393,7 @@ img.emoji {
                         <span class="share_link-title">Twitter</span>                    
                     </div>
                 </a>
-                <a class="share_link share_facebook" target="_blank" href="https://www.facebook.com/share.php?u=/las-inmobiliarias-en-el-mundo-digital/">
+                <a class="share_link share_facebook" target="_blank" href="https://www.facebook.com/share.php?u=https://www.ecrew.agency/las-inmobiliarias-en-el-mundo-digital/">
                     <div class="share_link-block">
                         <span class="fa fa-facebook"></span>
                         <span class="share_link-title">Facebook</span>
