--- a/las-principales-tendencias-y-predicciones-del-marketing-digital-para-el-2021/index.html
+++ b/las-principales-tendencias-y-predicciones-del-marketing-digital-para-el-2021/index.html
@@ -404,7 +404,7 @@ img.emoji {
                         <span class="share_link-title">Twitter</span>                    
                     </div>
                 </a>
-                <a class="share_link share_facebook" target="_blank" href="https://www.facebook.com/share.php?u=/las-principales-tendencias-y-predicciones-del-marketing-digital-para-el-2021/">
+                <a class="share_link share_facebook" target="_blank" href="https://www.facebook.com/share.php?u=https://www.ecrew.agency/las-principales-tendencias-y-predicciones-del-marketing-digital-para-el-2021/">
                     <div class="share_link-block">
                         <span class="fa fa-facebook"></span>
                         <span class="share_link-title">Facebook</span>
