--- a/lead-management-gestion-clave-en-la-estrategia-de-inbound-marketing/index.html
+++ b/lead-management-gestion-clave-en-la-estrategia-de-inbound-marketing/index.html
@@ -481,7 +481,7 @@ img.emoji {
                         <span class="share_link-title">Twitter</span>                    
                     </div>
                 </a>
-                <a class="share_link share_facebook" target="_blank" href="https://www.facebook.com/share.php?u=/lead-management-gestion-clave-en-la-estrategia-de-inbound-marketing/">
+                <a class="share_link share_facebook" target="_blank" href="https://www.facebook.com/share.php?u=https://www.ecrew.agency/lead-management-gestion-clave-en-la-estrategia-de-inbound-marketing/">
                     <div class="share_link-block">
                         <span class="fa fa-facebook"></span>
                         <span class="share_link-title">Facebook</span>
