--- a/libros-imperdibles-de-marketing-digital/index.html
+++ b/libros-imperdibles-de-marketing-digital/index.html
@@ -462,7 +462,7 @@ img.emoji {
                         <span class="share_link-title">Twitter</span>                    
                     </div>
                 </a>
-                <a class="share_link share_facebook" target="_blank" href="https://www.facebook.com/share.php?u=/libros-imperdibles-de-marketing-digital/">
+                <a class="share_link share_facebook" target="_blank" href="https://www.facebook.com/share.php?u=https://www.ecrew.agency/libros-imperdibles-de-marketing-digital/">
                     <div class="share_link-block">
                         <span class="fa fa-facebook"></span>
                         <span class="share_link-title">Facebook</span>
