--- a/marketing-digital-y-las-ventas/index.html
+++ b/marketing-digital-y-las-ventas/index.html
@@ -419,7 +419,7 @@ img.emoji {
                         <span class="share_link-title">Twitter</span>                    
                     </div>
                 </a>
-                <a class="share_link share_facebook" target="_blank" href="https://www.facebook.com/share.php?u=/marketing-digital-y-las-ventas/">
+                <a class="share_link share_facebook" target="_blank" href="https://www.facebook.com/share.php?u=https://www.ecrew.agency/marketing-digital-y-las-ventas/">
                     <div class="share_link-block">
                         <span class="fa fa-facebook"></span>
                         <span class="share_link-title">Facebook</span>
