--- a/presentamos-a-nuestra-country-manager-peru/index.html
+++ b/presentamos-a-nuestra-country-manager-peru/index.html
@@ -377,7 +377,7 @@ img.emoji {
                         <span class="share_link-title">Twitter</span>                    
                     </div>
                 </a>
-                <a class="share_link share_facebook" target="_blank" href="https://www.facebook.com/share.php?u=/presentamos-a-nuestra-country-manager-peru/">
+                <a class="share_link share_facebook" target="_blank" href="https://www.facebook.com/share.php?u=https://www.ecrew.agency/presentamos-a-nuestra-country-manager-peru/">
                     <div class="share_link-block">
                         <span class="fa fa-facebook"></span>
                         <span class="share_link-title">Facebook</span>
