--- a/priorizar-el-marketing-de-contenidos-para-una-estrategia-fintech-efectiva/index.html
+++ b/priorizar-el-marketing-de-contenidos-para-una-estrategia-fintech-efectiva/index.html
@@ -514,7 +514,7 @@ img.emoji {
                         <span class="share_link-title">Twitter</span>                    
                     </div>
                 </a>
-                <a class="share_link share_facebook" target="_blank" href="https://www.facebook.com/share.php?u=/priorizar-el-marketing-de-contenidos-para-una-estrategia-fintech-efectiva/">
+                <a class="share_link share_facebook" target="_blank" href="https://www.facebook.com/share.php?u=https://www.ecrew.agency/priorizar-el-marketing-de-contenidos-para-una-estrategia-fintech-efectiva/">
                     <div class="share_link-block">
                         <span class="fa fa-facebook"></span>
                         <span class="share_link-title">Facebook</span>
