--- a/proceso-creativo-el-camino-a-la-gran-idea/index.html
+++ b/proceso-creativo-el-camino-a-la-gran-idea/index.html
@@ -396,7 +396,7 @@ img.emoji {
                         <span class="share_link-title">Twitter</span>                    
                     </div>
                 </a>
-                <a class="share_link share_facebook" target="_blank" href="https://www.facebook.com/share.php?u=/proceso-creativo-el-camino-a-la-gran-idea/">
+                <a class="share_link share_facebook" target="_blank" href="https://www.facebook.com/share.php?u=https://www.ecrew.agency/proceso-creativo-el-camino-a-la-gran-idea/">
                     <div class="share_link-block">
                         <span class="fa fa-facebook"></span>
                         <span class="share_link-title">Facebook</span>
