--- a/recorridos-virtuales-360o-para-inmobiliarias/index.html
+++ b/recorridos-virtuales-360o-para-inmobiliarias/index.html
@@ -405,7 +405,7 @@ img.emoji {
                         <span class="share_link-title">Twitter</span>                    
                     </div>
                 </a>
-                <a class="share_link share_facebook" target="_blank" href="https://www.facebook.com/share.php?u=/recorridos-virtuales-360o-para-inmobiliarias/">
+                <a class="share_link share_facebook" target="_blank" href="https://www.facebook.com/share.php?u=https://www.ecrew.agency/recorridos-virtuales-360o-para-inmobiliarias/">
                     <div class="share_link-block">
                         <span class="fa fa-facebook"></span>
                         <span class="share_link-title">Facebook</span>
