--- a/tik-tok-y-como-utilizarlo-con-tu-marca/index.html
+++ b/tik-tok-y-como-utilizarlo-con-tu-marca/index.html
@@ -429,7 +429,7 @@ img.emoji {
                         <span class="share_link-title">Twitter</span>                    
                     </div>
                 </a>
-                <a class="share_link share_facebook" target="_blank" href="https://www.facebook.com/share.php?u=/tik-tok-y-como-utilizarlo-con-tu-marca/">
+                <a class="share_link share_facebook" target="_blank" href="https://www.facebook.com/share.php?u=https://www.ecrew.agency/tik-tok-y-como-utilizarlo-con-tu-marca/">
                     <div class="share_link-block">
                         <span class="fa fa-facebook"></span>
                         <span class="share_link-title">Facebook</span>
