--- a/tips-para-optimizar-el-seo/index.html
+++ b/tips-para-optimizar-el-seo/index.html
@@ -400,7 +400,7 @@ img.emoji {
                         <span class="share_link-title">Twitter</span>                    
                     </div>
                 </a>
-                <a class="share_link share_facebook" target="_blank" href="https://www.facebook.com/share.php?u=/tips-para-optimizar-el-seo/">
+                <a class="share_link share_facebook" target="_blank" href="https://www.facebook.com/share.php?u=https://www.ecrew.agency/tips-para-optimizar-el-seo/">
                     <div class="share_link-block">
                         <span class="fa fa-facebook"></span>
                         <span class="share_link-title">Facebook</span>
